--- a/static/index.html
+++ b/static/index.html
@@ -182,7 +182,8 @@
 
         <!-- Controls Card -->
         <div class="bg-dark-card rounded-xl p-4 md:p-6">
-            <h2 class="text-lg font-semibold text-teal border-b border-gray-700 pb-3 mb-6">Controls</h2>
+            <h2 class="text-lg font-semibold text-teal border-b border-gray-700 pb-3 mb-2">Controls</h2>
+            <p class="text-gray-500 text-xs mb-6">Note: LED, timers, and recharge power controls don't show current device values — they only allow setting new values.</p>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- AC Output Toggle -->
